temporary fix: x-overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 300;
 	color:#333333;
+	overflow: hidden;x
 }
 
 #canvas{
